--- a/index.html
+++ b/index.html
@@ -22,9 +22,11 @@
     </header>
 
 
-    <div class="img-container">
-        <img src="assets/Images/bluestripes.jpeg" alt="stripes" width="100%" height="100">
-        <div class="bottom-right">Cool subtitle here!</div>
+    <div class="hero-image">
+        <div class="hero-text">
+            <h1>Ismeny Saguilan</h1>
+            <p>I'm a full time student in Coding Bootcamp</p>
+        </div>
     </div>
 
 
