--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 
  
-    <div id="about">
+    <div id="about" class="about-flex">
         <h3>About Me</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut, vitae. Recusandae iusto, 
                 quidem ut repellendus, ipsum vero soluta aspernatur id 
@@ -39,11 +39,10 @@
             </p>
     </div>
 
-    <div id="work">
+    <div id="work" class="">
         <h3>Work</h3>
-          
-
-    <div class="grid-container">
+        <div class="grid-container">
+            <a href="file:///Users/ismeny/Desktop/Bootcamp/Homework/Homework-1-HTML-Refactor/index.html">Horiseon</a>
         <div class="Horiseon">  
             <h2>Horiseon</h2>
             <p>MERN Stack</p>
