--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Profesional Portfolio</title>
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/reset.css">
@@ -24,8 +25,7 @@
 
     <div class="hero-image">
         <div class="hero-text">
-            <h1>Ismeny Saguilan</h1>
-            <p>I'm a full time student in Coding Bootcamp</p>
+            <h1>My Portfolio</h1>
         </div>
     </div>
 
@@ -33,9 +33,8 @@
  
     <div id="about" class="about-flex">
         <h3>About Me</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut, vitae. Recusandae iusto, 
-                quidem ut repellendus, ipsum vero soluta aspernatur id 
-                consequatur ducimus voluptas sunt debitis veniam cupiditate fuga eaque nobis.
+            <p>
+                I'm a full time student in Coding Bootcamp!
             </p>
     </div>
 
@@ -47,7 +46,7 @@
             <h2>Horiseon</h2>
             <p>MERN Stack</p>
             </div>
-    
+    X
     <div class="led-wall">  
         <h2>LED Wall</h2>
         <p>Node/ IoT</p>
