images not showing

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <title>My Profesional Portfolio</title>
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/reset.css">
@@ -38,7 +38,7 @@
             </p>
     </div>
 
-    <div id="work" class="">
+    <div id="work">
         <h3>Work</h3>
         <div class="grid-container">
             <a href="file:///Users/ismeny/Desktop/Bootcamp/Homework/Homework-1-HTML-Refactor/index.html">Horiseon</a>
