--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     
     <title>My Profesional Portfolio</title>
-    <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/reset.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+    
 </head>
 
 <body>
