updated portfolio, added project 1

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
             <p>MERN Stack</p>
             </div>
     
-    <div class="led-wall">  
-        <h2>LED Wall</h2>
-        <p>Node/ IoT</p>
+    <div class="cosmos">  
+        <h2>Crypto Cosmos</h2>
+        <p>HTML, CSS, JavaScript</p>
         </div>
     
        <div class="calculator">  
